<resources>
    <string name="app_name">Weather</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="error">Error</string>
    <string name="video_stream">Video Stream</string>
    <string name="da_nang">Da Nang</string>
    <string name="_19">_ _</string>
    <string name="temp_day">_ _ - _ _</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Daily</string>
    <string name="_12_am">12 AM</string>
    <string name="_39">39%</string>
    <string name="_20">Humidity: _ _</string>
</resources>