<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen.MainActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/bg"
        android:id="@+id/background"
       >
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/reload"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_reload"
            android:visibility="invisible"
            android:contentDescription="@string/todo"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/house"
            >
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Context_H_4"
                android:textAlignment="center"
                android:text="@string/da_nang"
                />
            <LinearLayout
                android:id="@+id/view_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/l_h"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/img_temp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="gone"

                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    style="@style/Context_big"
                    android:text="@string/_19"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/l_h"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_20"
                style="@style/Context_H4"


                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/l_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_temp"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:id="@+id/temp_day"
                    style="@style/Context_H4.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_day"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="70dp"
            android:src="@drawable/house"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:cardElevation="200dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/view_bottom_sheet">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <LinearLayout
                    android:id="@+id/tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tab_hourly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/hourly"
                        style="@style/Context_H4.Bold"
                        android:textAlignment="center"
                        android:textColor="@color/color_select"
                        android:layout_weight="1"
                        android:background="@drawable/view_tab_select"
                        />
                    <TextView
                        android:id="@+id/tab_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/weekly"
                        style="@style/Context_H4.Bold"
                        android:textColor="@color/color_unselect"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <ViewAnimator
                    android:id="@+id/animator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="20dp"
                    android:inAnimation="@anim/slide_in_right"
                    android:outAnimation="@anim/slide_out_right"
                    app:layout_constraintBottom_toTopOf="@id/bottom_bt"
                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/view_hourly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:scrollbars="none"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/view_weekly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:scrollbars="none"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </ViewAnimator>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bottom_bt"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/bottom_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >
                    <ImageButton
                        android:id="@+id/bt_local"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/bg_ic"

                        android:contentDescription="@string/todo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        />



                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:elevation="-1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
